--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "react-dom": "18"
   },
   "devDependencies": {
+    "@types/node": "20.10.3",
+    "@types/react": "18.2.42",
     "eslint": "8",
     "eslint-config-next": "14.0.1"
   }
